Fixes for Issue #2: Chapter 5 - formula for hi (leverage) incorrect, fixed. Chapter 9 - support vectors formula fixed by fixing the equation for the line, and all chapters updated with correct path to data files.

--- a/src/chapter10.ipynb
+++ b/src/chapter10.ipynb
@@ -42,7 +42,7 @@
      "input": [
       "# Dataset imported from R using write.csv(USArrests, \"/tmp/USArrests.csv\", row.names=FALSE)\n",
       "# Each row in this dataset corresponds to one of the 50 US states.\n",
-      "usa_df = pd.read_csv(\"../../data/statlearning_notebooks/USArrests.csv\")\n",
+      "usa_df = pd.read_csv(\"../data/USArrests.csv\")\n",
       "usa_df.head()"
      ],
      "language": "python",
