--- a/src/chapter2.ipynb
+++ b/src/chapter2.ipynb
@@ -482,7 +482,7 @@
      "collapsed": false,
      "input": [
       "# data comes from ISL book site: http://www-bcf.usc.edu/~gareth/ISL/data.html\n",
-      "auto_df = pd.read_csv(\"../../data/statlearning_notebooks/Auto.csv\")\n",
+      "auto_df = pd.read_csv(\"../data/Auto.csv\")\n",
       "auto_df.columns     # column names"
      ],
      "language": "python",
