--- a/src/chapter3.ipynb
+++ b/src/chapter3.ipynb
@@ -38,7 +38,7 @@
      "collapsed": false,
      "input": [
       "# Data from R ISLR package - write.csv(Boston, \"Boston.csv\", col.names = FALSE)\n",
-      "boston_df = pd.read_csv(\"../../data/statlearning_notebooks/Boston.csv\")\n",
+      "boston_df = pd.read_csv(\"../data/Boston.csv\")\n",
       "boston_df.head()"
      ],
      "language": "python",
@@ -757,7 +757,7 @@
      "collapsed": false,
      "input": [
       "# Data from ISLR package: write.csv(Carseats, 'Carseats.csv', col.names=FALSE)\n",
-      "carseats_df = pd.read_csv(\"../../data/statlearning_notebooks/Carseats.csv\")\n",
+      "carseats_df = pd.read_csv(\"../data/Carseats.csv\")\n",
       "carseats_df.head()"
      ],
      "language": "python",
