--- a/src/chapter4.ipynb
+++ b/src/chapter4.ipynb
@@ -38,7 +38,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "smarket_df = pd.read_csv(\"../../data/statlearning_notebooks/Smarket.csv\")\n",
+      "smarket_df = pd.read_csv(\"../data/Smarket.csv\")\n",
       "smarket_df.head()"
      ],
      "language": "python",
