--- a/src/chapter6.ipynb
+++ b/src/chapter6.ipynb
@@ -41,7 +41,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "hitters_df = pd.read_csv(\"../../data/statlearning_notebooks/Hitters.csv\")\n",
+      "hitters_df = pd.read_csv(\"../data/Hitters.csv\")\n",
       "hitters_df.dropna(inplace=True)\n",
       "hitters_df.head()"
      ],
