--- a/src/chapter7.ipynb
+++ b/src/chapter7.ipynb
@@ -43,7 +43,7 @@
      "collapsed": false,
      "input": [
       "# Data comes from ISLR::Wage - written using write.csv(Wage, \"wage.csv\", row.names=FALSE)\n",
-      "wage_df = pd.read_csv(\"../../data/statlearning_notebooks/Wage.csv\")\n",
+      "wage_df = pd.read_csv(\"../data/Wage.csv\")\n",
       "wage_df.head()"
      ],
      "language": "python",
