--- a/src/chapter8.ipynb
+++ b/src/chapter8.ipynb
@@ -45,7 +45,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "carseats_df = pd.read_csv(\"../../data/statlearning_notebooks/Carseats.csv\")\n",
+      "carseats_df = pd.read_csv(\"../data/Carseats.csv\")\n",
       "carseats_df.head()"
      ],
      "language": "python",
@@ -513,7 +513,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "boston_df = pd.read_csv(\"../../data/statlearning_notebooks/Boston.csv\")\n",
+      "boston_df = pd.read_csv(\"../data/Boston.csv\")\n",
       "boston_df.head()"
      ],
      "language": "python",
